--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -29,6 +29,15 @@
       ]
     },
     {
+      "login": "Pessevmeyen",
+      "name": "Furkan Erucar",
+      "avatar_url": "https://avatars.githubusercontent.com/u/97690923?v=4",
+      "profile": "https://github.com/Pessevmeyen",
+      "contributions": [
+        "code"
+      ]
+    },
+    {
       "login": "MobvenSametOgutcuoglu",
       "name": "Samet Ögütcüoğlu",
       "avatar_url": "https://avatars.githubusercontent.com/u/108695720?v=4",
