--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -38,10 +38,10 @@
       ]
     },
     {
-      "login": "MobvenSametOgutcuoglu",
+      "login": "samet-ogutcuoglu",
       "name": "Samet Ögütcüoğlu",
       "avatar_url": "https://avatars.githubusercontent.com/u/108695720?v=4",
-      "profile": "https://github.com/MobvenSametOgutcuoglu",
+      "profile": "https://github.com/samet-ogutcuoglu",
       "contributions": [
         "code"
       ]
